Добавил запуск контейнера c параметром --enable-preview